--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = mongodb://localhost:27017/build_api
+MONGODB_URL = mongodb+srv://sachinkumavat93:oT4EhviILwa3zkgd@test.hd02b.mongodb.net/
